Resolve issue BGA-161  The background breaks the list layout by remove the right bottom radius and left bottom radius of div group and detail.

--- a/main/src/css/main.css
+++ b/main/src/css/main.css
@@ -81,15 +81,16 @@
 }
 
 #group {
-    border: 4px solid #949089; 
+    border: 1px solid #949089; 
     -webkit-border-top-left-radius: 0px;
     -webkit-border-top-right-radius: 50px;
     -webkit-border-bottom-left-radius: 0px;
-    -webkit-border-bottom-right-radius: 50px;
+    -webkit-border-bottom-right-radius: 0px;
     /*float:left;*/
     width:32%;
-    height:1000px;
-    margin:25px 0 15px 0;
+    height:1020px;
+    margin:25px 0 0 0;
+    border-bottom: 0px;
 }
 
 #selected-group-item {
@@ -142,19 +143,20 @@
 }
 
 #detail {
-    border: 4px solid #C0BAAE; 
+    border: 1px solid #C0BAAE; 
     -webkit-border-top-left-radius: 40px;
     -webkit-border-top-right-radius: 0px;
-    -webkit-border-bottom-left-radius: 40px;
+    -webkit-border-bottom-left-radius: 0px;
     -webkit-border-bottom-right-radius: 0px;
     /*float:right;*/
     width:68%;
     background-color:#FFF;
-    height:1015px;
-    margin:10px 0 15px 0;
+    height:1035px;
+    margin:10px 0 0 0;
     position:absolute;
     top:0px;
     left:245px;
+    border-bottom: 0px;
 }
 
 #detail-title {
